--- a/js/i18n/es.json
+++ b/js/i18n/es.json
@@ -1,138 +1,138 @@
 {
-    "dom.title": {
+    "title": {
         "text": "Gonzalo Cabezas | Desarrollador Frontend web"
     },
-    "dark.btn": {
+    "darkBtn": {
         "aria-label": "Alternar modo oscuro"                        
     },
-    "lang.btn.ca": {
+    "langBtnCa": {
         "aria-label": "Catalán"
     },
-    "lang.btn.es": {
+    "langBtnEs": {
         "aria-label": "Español"
     },
-    "lang.btn.en": {
+    "langBtnEn": {
         "aria-label": "Inglés"
     },
-    "gonzalo.photo": {
+    "gonzalo": {
         "alt": "Retrato de Gonzalo Cabezas"
     },
-    "profile.title": {
+    "profile": {
         "html": "Desarrollador <span lang='en-GB'>Frontend</span> en transición a <span lang='en-GB'>Fullstack</span>"
     },
-    "profile.bio": {
+    "biography": {
         "html": "Me obsesiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el <span lang='en-GB'>Red Team</span> me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien."
     },
-    "section.languages": {
+    "languages": {
         "text": "Idiomas"
     },
-    "lang.ca": {
+    "catalan": {
         "html": "Catalán <svg class='icons-color-1' role='img' aria-label='Nivel nativo' aria-hidden='false' width='124' height='18' preserveAspectRatio='xMinYMin meet'><use href='img/sprite.svg#native-lang'></use></svg>"
     },
-    "lang.es": {
+    "spanish": {
         "html": "Español <svg class='icons-color-1' role='img' aria-label='Nivel nativo' aria-hidden='false' width='124' height='18' preserveAspectRatio='xMinYMin meet'><use href='img/sprite.svg#native-lang'></use></svg>"
     },
-    "lang.en": {
+    "english": {
         "html": "Inglés <svg class='icons-color-1' role='img' aria-label='Nivel medio' aria-hidden='false' width='124' height='18' preserveAspectRatio='xMinYMin meet'><use href='img/sprite.svg#medium-lang'></use></svg>"
     },
-    "section.contact": {
+    "contact": {
         "text": "Contacto"
     },
-    "address.mail": {
+    "mail": {
         "aria-label": "Enviar E-mail"
     },
-    "address.tel": {
+    "mobile": {
         "aria-label": "Enviar WhatsApp o llamar"
     },
-    "address.linkedin": {
+    "linkedin": {
         "aria-label": "Visitar perfil de Linkedin"
     },
-    "section.studies": {
+    "studies": {
         "text": "Estudios"
     },
-    "studies.daw.title": {
+    "appDev": {
         "html": "<strong>Desarrollo de aplicaciones con tecnologias web</strong> <span>(cursando)</span>"
     },
-    "studies.daw.ja": {
+    "JSONandAJAX": {
         "html": "<abbr lang='en-GB' title='JavaScript Object Notation'>JSON</abbr> y <abbr lang='en-GB' title='Asynchronous JavaScript and XML'>AJAX</abbr>"
     },
-    "studies.daw.jp": {
+    "JAVAandPHP": {
         "html": "<span lang='en-GB'>Java</span> y <abbr lang='en-GB' title='Hypertext Preprocessor'>PHP</abbr> <span>(próximamente)</span>"
     },
-    "studies.ifcd.title": {
+    "webDev": {
         "text": "Confección y publicación de páginas web"
     },
-    "studies.ifcd.hc": {
+    "HTMLandCSS": {
         "html": "<abbr lang='en-GB' title='Hypertext Markup Language'>HTML5</abbr> y <abbr lang='en-GB' title='Cascading Style Sheets'>CSS3</abbr>"
     },
-    "studies.ifcd.jw": {
+    "JSandWP": {
         "aria-label": "Ver certificado",
         "html": "<span lang='en-GB'>Vanilla <abbr title='JavaScript'>JS</abbr></span> y publicación web"
     },
-    "studies.ifcd.add": {
+    "AddTraining": {
         "aria-label": "Ver certificado",
         "text": "Formación complementaria"
     },
-    "studies.others": {
+    "otherCert": {
         "text": "Otros certificados"
     },
-    "carousel.controls": {
+    "carouselCtrl": {
         "aria-label": "Controles del carrusel"
     },
-    "carousel.back": {
+    "carouselBack": {
         "aria-label": "Retroceder"
     },
-    "carousel.advance": {
+    "carouselAdvance": {
         "aria-label": "Avanzar"
     },
-    "studies.uned.access": {
+    "UNEDacces": {
         "aria-label": "Ver certificado",
         "text": "Acceso a la universidad"
     },
-    "studies.eso.title": {
+    "ESO": {
         "aria-label": "Ver certificado",
         "html": "Certificado en <abbr lang='es-ES' title='Educación Secundaria Obligatoria'>ESO</abbr>"
     },
-    "section.experience": {
+    "workExp": {
         "text": "Experiencia laboral"
     },
-    "experience.sunlife.title": {
+    "RRPP": {
         "text": "Relaciones públicas"
     },
-    "experience.sunlife.detail": {
+    "teamCoord": {
         "text": "Coordinador de equipo"
     },
-    "experience.volunteer.title": {
+    "volunteer": {
         "text": "Voluntario"
     },
-    "experience.volunteer.detail": {
+    "sorting": {
         "text": "Clasificación y empaquetado"
     },
-    "section.other": {
+    "otherData": {
         "text": "Otros datos"
     },
-    "other.download_cv": {
+    "downloadCV": {
         "aria-label": "Descargar CV pdf"
     },
-    "other.driving": {
+    "drivingLic": {
         "text": "Permiso de conducir B y vehículo propio"
     },
-    "other.availability": {
-        "text": "Disponibilidad total dentro de la provincia de Barcelona"
+    "availability": {
+        "html": "Disponibilidad total dentro de la provincia de <span lang='ca-ES'>Barcelona</span>"
     },
-    "burger.btn": {
+    "burgerBtn": {
         "aria-label": "Abrir menú"
     },
-    "portfolio.estopa": {
+    "estopa": {
         "alt": "Página de fans de Estopa. Inacabado"
     },
-    "cookies.bar": {
+    "cookies": {
         "html": "🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id='accept-cookies' class='icons-scale' aria-label='Seguir navegando'>Continuar</button> | <a id='info-cookies' href='https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)' target='_blank' rel='noopener noreferrer' aria-label='Más información sobre cookies'>¿Qué es una <span lang='en-GB'>cookie</span>?"
     },
-    "modal.iframe": {
+    "modaliframe": {
         "aria-label": "Certificado oficial"
     },
-    "modal.close": {
+    "modalClose": {
         "aria-label": "Cerrar"
     }
 }
