--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -136,7 +136,7 @@
         "alt": "Página de fans de Estopa. Inacabado"
     },
     "cookies": {
-        "html": "🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id='accept-cookies' class='icons-scale' aria-label='Seguir navegando'>Aceptar</button> <button id='reject-cookies' class='icons-scale' aria-label='No me importan las cookies' type='button'>Rechazar</button> | <a id='info-cookies' href='https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)' target='_blank' rel='noopener noreferrer' aria-label='Más información'>¿Qué es una <span lang='en-GB'>cookie</span>?"
+        "html": "🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id='accept-cookies' class='icons-scale' aria-label='Seguir navegando'>Aceptar</button> <button id='reject-cookies' aria-label='No me importan las cookies' type='button'>Rechazar</button> | <a id='info-cookies' href='https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)' target='_blank' rel='noopener noreferrer' aria-label='Más información'>¿Qué es una <span lang='en-GB'>cookie</span>?"
     },
     "modaliframe": {
         "aria-label": "Certificado oficial"
